--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/psychicnikola-07-22/">https://rank-fortress-digital-agency.github.io/psychicnikola-07-22/</a><br>
-                <a target="_bLank" href="http://psychicnikola-07-22.s3-website.ap-south-1.amazonaws.com">http://psychicnikola-07-22.s3-website.ap-south-1.amazonaws.com</a><br>
-                <a target="_bLank" href="https://jovial-lokum-59f6df.netlify.app/">https://jovial-lokum-59f6df.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/psychicnikola-08-22/">https://rank-fortress-digital-agency.github.io/psychicnikola-08-22/</a><br>
+                <a target="_bLank" href="http://psychicnikola-08-22.s3-website-us-east-1.amazonaws.com">http://psychicnikola-08-22.s3-website-us-east-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://amazing-torte-064ae4.netlify.app/">https://amazing-torte-064ae4.netlify.app/</a><br>
             </section>
 
         </div>
